azure-devops/py-flask/k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: py-flask-app
  labels:
    name: py-flask-app
    environment: dev
    project: DS-AKS
