azure-devops/py-flask/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: py-flask-service
  namespace: py-flask-app
  labels:
    app: py-flask-app
    service: py-flask-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8087
    protocol: TCP
    name: http
  selector:
    app: py-flask-app
